alteração raiz do projeto

--- a/index.html
+++ b/index.html
@@ -5,18 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Image Hover Animation</title>
-    <link rel="stylesheet" href="/HoverAnimation.css">
+    <link rel="stylesheet" href="./HoverAnimation.css">
 </head>
 
 <body>
     <div class="container">
         <div class="icon-image">
             <div class="icon">
-                <img src="/img/Rosa Dias.jpg" alt="Rosa Diaz">
+                <img src="./img/Rosa Dias.jpg" alt="Rosa Diaz">
             </div>
             <div class="hover-image">
                 <div class="img">
-                    <img src="/img/Rosa Dias.jpg" alt="Rosa Diaz">
+                    <img src="./img/Rosa Dias.jpg" alt="Rosa Diaz">
                 </div>
                 <div class="content">
                     <div class="details">
@@ -28,11 +28,11 @@
         </div>
         <div class="icon-image">
             <div class="icon">
-                <img src="/img/Jeffords.jpg" alt="Jeffords">
+                <img src="./img/Jeffords.jpg" alt="Jeffords">
             </div>
             <div class="hover-image">
                 <div class="img">
-                    <img src="/img/Jeffords.jpg" alt="Jeffords">
+                    <img src="./img/Jeffords.jpg" alt="Jeffords">
                 </div>
                 <div class="content">
                     <div class="details">
@@ -44,11 +44,11 @@
         </div>
         <div class="icon-image">
             <div class="icon">
-                <img src="/img/Holt.jpg" alt="Raymond Holt">
+                <img src="./img/Holt.jpg" alt="Raymond Holt">
             </div>
             <div class="hover-image">
                 <div class="img">
-                    <img src="/img/Holt.jpg" alt="Raymond Holt">
+                    <img src="./img/Holt.jpg" alt="Raymond Holt">
                 </div>
                 <div class="content">
                     <div class="details">
@@ -60,11 +60,11 @@
         </div>
         <div class="icon-image">
             <div class="icon">
-                <img src="/img/Boyle.jpg" alt="Charles Boyle">
+                <img src="./img/Boyle.jpg" alt="Charles Boyle">
             </div>
             <div class="hover-image">
                 <div class="img">
-                    <img src="/img/Boyle.jpg" alt="Charles Boyle">
+                    <img src="./img/Boyle.jpg" alt="Charles Boyle">
                 </div>
                 <div class="content">
                     <div class="details">
@@ -76,11 +76,11 @@
         </div>
         <div class="icon-image">
             <div class="icon">
-                <img src="/img/Amy Santiago.jpg" alt="Amy Santiago">
+                <img src="./img/Amy Santiago.jpg" alt="Amy Santiago">
             </div>
             <div class="hover-image">
                 <div class="img">
-                    <img src="/img/Amy Santiago.jpg" alt="Amy Santiago">
+                    <img src="./img/Amy Santiago.jpg" alt="Amy Santiago">
                 </div>
                 <div class="content">
                     <div class="details">
@@ -92,11 +92,11 @@
         </div>
         <div class="icon-image last">
             <div class="icon">
-                <img src="/img/Peralta.jpg" alt="Jake Peralta">
+                <img src="./img/Peralta.jpg" alt="Jake Peralta">
             </div>
             <div class="hover-image">
                 <div class="img">
-                    <img src="/img/Peralta.jpg" alt="Jake Peralta">
+                    <img src="./img/Peralta.jpg" alt="Jake Peralta">
                 </div>
                 <div class="content">
                     <div class="details">
